--- a/force-app/main/default/classes/LeadTriggerHandlerTest.cls
+++ b/force-app/main/default/classes/LeadTriggerHandlerTest.cls
@@ -41,5 +41,174 @@ public with sharing class LeadTriggerHandlerTest {
         }
 
     }
+
+    @IsTest
+    public static void testHandleTitleNormalization_manager_happyPath() {
+
+        // Arrange - Set up the data in order to test the method
+        List<Lead> testLeads = [SELECT Id, Name, Title 
+                                FROM Lead
+                                WHERE Title LIKE '%mgr%' 
+                                OR Title LIKE '%manager%'
+                                OR Title LIKE '%head of department%'];
+        
+        System.debug(testLeads);
+        
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        for (Lead l : testLeads) {
+            System.debug(l.Title);
+            Assert.areEqual('Manager', l.Title, 'Lead Title was not updated');
+        }
+
+    }
+
+    @IsTest
+    public static void testHandleTitleNormalization_executive_happyPath() {
+
+        // Arrange - Set up the data in order to test the method
+        List<Lead> testLeads = [SELECT Id, Name, Title 
+                                FROM Lead
+                                WHERE Title LIKE '%exec%' 
+                                OR Title LIKE '%chief%'
+                                OR Title LIKE '%head%'];
+        
+        System.debug(testLeads);
+        
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        for (Lead l : testLeads) {
+            System.debug(l.Title);
+            Assert.areEqual('Executive', l.Title, 'Lead Title was not updated');
+        }
+
+    }
+
+    @IsTest
+    public static void testHandleTitleNormalization_assistant_happyPath() {
+
+        // Arrange - Set up the data in order to test the method
+        List<Lead> testLeads = [SELECT Id, Name, Title 
+                                FROM Lead
+                                WHERE Title LIKE '%assist%' 
+                                OR Title LIKE '%deputy%'
+                                OR Title LIKE '%jr%'];
+        
+        System.debug(testLeads);
+        
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        for (Lead l : testLeads) {
+            System.debug(l.Title);
+            Assert.areEqual('Assistant', l.Title, 'Lead Title was not updated');
+        }
+
+    }
+    @IsTest
+    public static void testHandleTitleNormalization_noChange_negativePath() {
+
+        // Arrange - Set up the data in order to test the method
+        Lead unknownTitleLead = new Lead(
+            FirstName = 'Ben',
+            LastName = 'Reilly',
+            Company = 'Unknown Inc.',
+            Title = 'Scarlet Spider',
+            Status = 'Open - Not Contacted'
+        );
+        insert unknownTitleLead;
+
+        List<Lead> testLeads = [SELECT Id, Name, Title
+                                FROM Lead
+                                WHERE Id = :unknownTitleLead.Id];
+
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        System.debug(testLeads[0]);
+        Assert.areEqual('Scarlet Spider', testLeads[0].Title, 'Unexpected title change occurred');
+
+    }
+    @IsTest
+    public static void testHandleTitleNormalization_nullTitle_edgeCase() {
+
+        // Arrange - Set up the data in order to test the method
+        Lead nullTitleLead = new Lead(
+            FirstName = 'Frank',
+            LastName = 'Castle',
+            Company = 'Punisher Inc.',
+            Title = null,
+            Status = 'Open - Not Contacted'
+        );
+        insert nullTitleLead;
+
+        List<Lead> testLeads = [SELECT Id, Name, Title
+                                FROM Lead
+                                WHERE Id = :nullTitleLead.Id];
+
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        System.debug(testLeads[0]);
+        Assert.areEqual(null, testLeads[0].Title, 'Title should remain null');
+
+    }
+    @IsTest
+    public static void testHandleTitleNormalization_emptyTitle_edgeCase() {
+
+        // Arrange - Set up the data in order to test the method
+        Lead emptyTitleLead = new Lead(
+            FirstName = 'Matt',
+            LastName = 'Murdock',
+            Company = 'Nelson & Murdock',
+            Title = '',
+            Status = 'Open - Not Contacted'
+        );
+        insert emptyTitleLead;
+
+        List<Lead> testLeads = [SELECT Id, Name, Title
+                                FROM Lead
+                                WHERE Id = :emptyTitleLead.Id];
+
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        System.debug(testLeads[0]);
+        Assert.isTrue(String.isBlank(testLeads[0].Title), 'Title should remain empty or null');
+
+    }
+    @IsTest
+    public static void testHandleTitleNormalization_mixedCase_edgeCase() {
+
+        // Arrange - Set up the data in order to test the method
+        Lead mixedCaseLead = new Lead(
+            FirstName = 'Elektra',
+            LastName = 'Natchios',
+            Company = 'The Hand',
+            Title = 'vIcE PrEsIdENT',
+            Status = 'Open - Not Contacted'
+        );
+        insert mixedCaseLead;
+
+        List<Lead> testLeads = [SELECT Id, Name, Title
+                                FROM Lead
+                                WHERE Id = :mixedCaseLead.Id];
+
+        // Act - call the method to perform the test
+        LeadTriggerHandler.handleTitleNormalization(testLeads);
+
+        // Assert - use assertions to determine if the code functions as expected
+        System.debug(testLeads[0]);
+        Assert.areEqual('Vice President', testLeads[0].Title, 'Title was not normalized');
+
+    }
  
 }
