--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -111,18 +111,20 @@ public with sharing class LeadTriggerHandler {
 		// Step 1: Gather all lead emails
         Map<Id,String> leadToEmailMap = new Map<Id,String>();
 		for (Lead lead : leads) {
+			if (lead.IsConverted || String.isBlank(lead.Email)) {
+				continue; // Skip already converted or email-less leads to prevent recursion or invalid behavior
+			}
+
 			leadToEmailMap.put(lead.Id, lead.Email);
 		}
 
 		// Step 2: Find matching contacts based on email
-		Map<String, Contact> emailToContactMap = new Map<String, Contact>();
+		Map<String, List<Contact>> emailToContactMap = new Map<String, List<Contact>>();
 		for (Contact c : [SELECT Id, Email, AccountId FROM Contact WHERE Email IN :leadToEmailMap.values()]) {
 			if (!emailToContactMap.containsKey(c.Email)) {
-				emailToContactMap.put(c.Email, c);
+				emailToContactMap.put(c.Email, new List<Contact>{ c });
 			} else {
-				// If we found another contact with the same email, we don't auto-convert.
-				// So we remove the email from the map.
-				emailToContactMap.remove(c.Email);
+				emailToContactMap.get(c.Email).add(c);
 			}
 		}
 
@@ -131,11 +133,13 @@ public with sharing class LeadTriggerHandler {
 		LeadStatus convertStatus = [SELECT Id, MasterLabel FROM LeadStatus WHERE IsConverted = TRUE LIMIT 1];
 		for (Id leadId : leadToEmailMap.keySet()) {
             String leadEmail = leadToEmailMap.get(leadId);
-			if (emailToContactMap.containsKey(leadEmail)) {
+			if (emailToContactMap.containsKey(leadEmail) && emailToContactMap.get(leadEmail).size() == 1) {
+				Contact matchingContact = emailToContactMap.get(leadEmail)[0];
+
 				Database.LeadConvert lc = new Database.LeadConvert();
 				lc.setLeadId(leadId);
-				lc.setContactId(emailToContactMap.get(leadEmail).Id); // Use existing Contact Id
-				lc.setAccountId(emailToContactMap.get(leadEmail).AccountId); // Use existing Account Id
+				lc.setContactId(matchingContact.Id); // Use existing Contact Id
+				lc.setAccountId(matchingContact.AccountId); // Use existing Account Id
 				lc.setDoNotCreateOpportunity(true); // Assuming we don't want to create an opportunity
 				lc.setConvertedStatus(convertStatus.MasterLabel); // Set the converted status
 				leadConverts.add(lc);
@@ -143,7 +147,7 @@ public with sharing class LeadTriggerHandler {
 		}
 
 		if (!leadConverts.isEmpty()) {
-			List<Database.LeadConvertResult> lcrs = Database.convertLead(leadConverts);
+			List<Database.LeadConvertResult> lcrs = Database.convertLead(leadConverts, false);
 		}
 	}
 }
